# linkedin_job_searcher

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  app.py  cli.py  demo.py  linkedin_url_builder.py  main.py  make.ps1  pyproject.toml  requirements.txt  run_all_tests.py  setup.cfg  start_app.py  test_builder.py  test_linkedin_format.py  test_new_features.py  test_turkey_geoid.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
tests/: test_url_builder.py
